force-app/main/default/objects/OpportunityLineItem/fields/Calculated_List_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Calculated_List_Price_Adjustment__c</fullName>
    <formula>IF(
ISPICKVAL(Access_Type__c, &quot;Periodic&quot;),
( Aggregated_List_Price_Adjustment__c / Period_In_Months__c) ,

IF(
ISPICKVAL(Access_Type__c, &quot;Monthly&quot;),
(Aggregated_List_Price_Adjustment__c / 24) ,

( Aggregated_List_Price_Adjustment__c / 1)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated List Price Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>