force-app/main/default/objects/OpportunityLineItem/fields/Calculated_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price_Adjustment__c</fullName>
    <formula>IF(
    ISPICKVAL(Access_Type__c, &quot;Periodic&quot;), 
    (Aggregated_Price_Adjustment__c / Period_In_Months__c) / 100,
    
    IF(
        ISPICKVAL(Access_Type__c, &quot;Monthly&quot;), 
        (Aggregated_Price_Adjustment__c / 24) / 100,
        
        (Aggregated_Price_Adjustment__c / 1) / 100
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Price Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>