force-app/main/default/objects/OpportunityLineItem/fields/Capicity_Desks__c.field-meta.xml
<CustomField>
    <fullName>Capicity_Desks__c</fullName>
    <formula>Product__r.Capacity_Desks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capicity (Desks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>