force-app/main/default/objects/OpportunityLineItem/fields/Desk_Count__c.field-meta.xml
<CustomField>
    <fullName>Desk_Count__c</fullName>
    <label>Desk Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>