force-app/main/default/objects/OpportunityLineItem/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Used for tables in flows</description>
    <formula>HYPERLINK(&quot;https://rooms.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Id &amp; &quot;/view&quot;,  Opportunity.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>