force-app/main/default/objects/OpportunityLineItem/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>IF ( NOT(ISNULL(Entry_Date__c)),
TEXT(End_date__c) &amp; TEXT( Entry_Date__c),   TEXT( End_Date_Time__c ) &amp; TEXT ( Entry_Date_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>