force-app/main/default/objects/OpportunityLineItem/fields/Product_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Product_Is_Active__c</fullName>
    <formula>PricebookEntry.Product2.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Is Active</label>
    <type>Checkbox</type>
</CustomField>