force-app/main/default/objects/OpportunityLineItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://rooms.lightning.force.com/lightning/r/OpportunityLineItem/&quot; &amp; Id &amp; &quot;/view&quot;,   PricebookEntry.Product2.Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>