force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price_Adjustment__c</fullName>
    <description>The increase in price per product when renewing contracts</description>
    <label>Renewal Price Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>