force-app/main/default/objects/OpportunityLineItem/fields/Standard_List_Sum__c.field-meta.xml
<CustomField>
    <fullName>Standard_List_Sum__c</fullName>
    <formula>ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard List Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>