force-app/main/default/objects/OpportunityLineItem/fields/Total_Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Calculated_Price__c</fullName>
    <formula>IF( 
ISPICKVAL(Access_Type__c, &quot;Periodic&quot;),
(TotalPrice * Period_In_Months__c ) - (-((TotalPrice * Period_In_Months__c ) * Calculated_Price_Adjustment__c)),

IF(
ISPICKVAL(Access_Type__c, &quot;Monthly&quot;),
(TotalPrice * 24) - ((TotalPrice * 24 ) * (-Calculated_Price_Adjustment__c)),

TotalPrice - (TotalPrice * (-Calculated_Price_Adjustment__c))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Calculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>